# kern

./: .gitignore  Cargo.toml  Makefile  README.md  test_kern.sh
config/: kern.yaml
config/profiles/: building.yaml  coding.yaml  normal.yaml
docs/: DBUS.md  PROFILES.md  README.md
scripts/: install.sh  uninstall.sh
src/: config.rs  dbus_server.rs  enforcer.rs  killer.rs  main.rs  monitor.rs  notify.rs  profiles.rs  stats.rs
systemd/: kern.service
tests/: integration_tests.rs
tests/test_profiles/: coding_profile.yaml  edge_case_max_values.yaml  edge_case_min_values.yaml  empty_name.yaml  invalid_cpu.yaml  invalid_ram.yaml  invalid_temp.yaml  minimal_profile.yaml  no_name.yaml  valid_profile.yaml
