[package]
name = "kern"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Your Name <your.email@example.com>"]
description = "Smart resource manager for developers"
license = "MIT"

[[bin]]
name = "kern"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }

# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# System monitoring
sysinfo = "0.32"
procfs = "0.17"
nix = { version = "0.29", features = ["signal", "process"] }

# DBus (for GNOME extension communication)
zbus = { version = "4.4", default-features = false, features = ["tokio"] }

# Notifications
notify-rust = "4.11"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
colored = "2.1"
chrono = "0.4"
humantime = "2.1"
lazy_static = "1.5"

# Configuration
config = "0.14"
directories = "5.0"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.13"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
